--- a/runtime/pom.xml
+++ b/runtime/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>cat.joanpujol</groupId>
     <artifactId>quarkus-register-reflection-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
   <artifactId>quarkus-register-reflection</artifactId>
   <name>Quarkus Register Reflection - Runtime</name>
